tests/invalid/Function_Invalid_1.whiley
function f(int x) :
    asdkljkljg(x)
